--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -126,7 +126,7 @@ en:
     twitterAccount:
       "Twitter account"
     logout:
-      "Loggout"
+      "Logout"
     remember:
       "Remember me"
     password:
@@ -349,7 +349,7 @@ en:
         holderurl:
           "Add a RSS flow to follow"
         yourrss:
-          "Add your personnal<br/>RSS flows"
+          "Use RSS feeds <br/>from your account"
         opml:
           "Import an<br>OPML file"
       googlePlus:
