clean add sources form

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -27,7 +27,7 @@ en:
       action:
         "Actions"
       uri:
-        "Uri"
+        "Url"
       num:
         "Elements number"
       label:
