add the first draft of the filters printing page

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -107,8 +107,16 @@ en:
       "Home"
     news:
       "News"
+    yourFilters:
+      "Your filters"
+    yourSources:
+      "Your sources"
+    filters:
+      "filters"
     sources:
-      "Sources"
+      "sources"
+    tags:
+      "tags"
     twitter:
       "Your twitter timeline!"
     help:
