fix bug in searches section name

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -107,8 +107,8 @@ en:
       "Home"
     news:
       "News"
-    yourFilters:
-      "Your filters"
+    yourSearches:
+      "Your searches"
     yourSources:
       "Your sources"
     filters:
