--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -106,8 +106,8 @@ fr:
       "Accueil"
     news:
       "News"
-    yourFilters:
-      "Vos filtres"
+    yourSearches:
+      "Vos recherches"
     yourSources:
       "Vos sources"
     filters:
