clean the disclaimer for when user is creating a new request

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -143,7 +143,7 @@ en:
       "Your favorites news"
   search:
     disclaimer:
-      "Filter created, the new sources will be download soon, please be patient."
+      "Filter created, the new sources will be download soon, please be patient and reload the page."
     infobulle:
       "Can Reador help you?"
     sources:
