--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -142,7 +142,7 @@ fr:
       "Vos favoris"
   search:
     disclaimer:
-      "Filtre crée, les sources que vous avez ajoutées vont être traitées d'ici quelques minutes. Merci de patienter"
+      "Filtre crée, les sources que vous avez ajoutées vont être traitées d'ici quelques instants. Merci de rafraichir la page"
     infobulle:
       "Reador pour vous servir!"
     sources:
