--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -105,7 +105,7 @@ fr:
     home:
       "Accueil"
     news:
-      "News"
+      "Exemple de news"
     yourSearches:
       "Vos recherches"
     yourSources:
@@ -384,6 +384,8 @@ fr:
           "Termes obligatoires"
         ban:
           "Termes interdits"
+  leftMenu:
+    search: "Recherche"
 
   will_paginate:
     previous_label: "&#8592; Précédent"
