back to old menu organisation

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -106,7 +106,7 @@ en:
     home:
       "Home"
     news:
-      "News sample"
+      "News"
     yourSearches:
       "Your searches"
     yourSources:
