--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -105,7 +105,7 @@ fr:
     home:
       "Accueil"
     news:
-      "Exemple de news"
+      "News"
     yourSearches:
       "Vos recherches"
     yourSources:
