--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -26,7 +26,7 @@ fr:
       action:
         "Actions"
       uri:
-        "Url"
+        "Addresse de la source"
       num:
         "Nombre d'éléments"
       label:
@@ -36,7 +36,7 @@ fr:
       owner:
         "Owner"
       theme:
-        "Thème"
+        "catégorie"
       show:
         "Afficher"
       hide:
