now we can list news from all sources without error printing <http://boards.openlinksw.com/phpBB3/viewtopic.php?f=12&t=776&sid=265daefe4d6e602eabecd0638301b15a&start=10> clean the getName method for searches Fix bug on search reminder_panel  (was printing bad items)

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -156,7 +156,7 @@ en:
       "New search"
   index:
     disclaimer:
-      "Reador.NET is currently <b>under devlopment</b>, please say us all problems you can encounter using  <a href='javascript:void($zopim.livechat.window.openPopout())'>this link</a>!"
+      "Reador.NET is currently <b>under development</b>, please tell us all problems you can encounter using  <a href='javascript:void($zopim.livechat.window.openPopout())'>this link</a>!"
   moreabout:
     title:
       "More about Reador!"
