first draft of tags categorization in ZONE-watcher

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -311,6 +311,14 @@ en:
           "Update"
         cancel:
           "Cancel"
+    tags:
+      twitter: "Twitter"
+      place: "Place"
+      work: "Informatique"
+      organization: "Organization"
+      person: "Person"
+      event: "Event"
+      lang: "Lang"
   newmodal:
     breadcrumb:
       sources:
