fix sources category name in sources view

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -38,6 +38,8 @@ en:
         "Owner"
       theme:
         "Category"
+      dafaultTheme:
+        "undefined"
       show:
         "Show"
       hide:
