add possibility to rename a search directly from advanced modification page

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -329,6 +329,8 @@ en:
         "Filtering"
       results:
         "Results"
+    selectName: "Select search name"
+    selectNameHolder: "give a name to your search"
     sources:
       title:
         "Select your sources"
