add the share on help message for the items toolbar

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -323,6 +323,8 @@ en:
       person: "Person"
       event: "Event"
       lang: "Lang"
+    social:
+      shareOn: "Share on"
   newmodal:
     breadcrumb:
       sources:
