--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -322,6 +322,8 @@ fr:
       person: "Personne"
       event: "Evenement"
       lang: "Langue"
+    social:
+      shareOn: "Partager sur"
   newmodal:
     breadcrumb:
       sources:
