clean design of items printing page

--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -285,7 +285,7 @@ fr:
         "Modification avancée"
     users:
       share:
-        "Partager : "
+        Partager : ""
     popover:
       title:
         "Confirmation"
