clean design of items printing page and the left menu is now fixed!

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -283,10 +283,10 @@ en:
       update:
         "Update"
       change:
-        "Advanced modification"
+        "Advanced<br/> modification"
     users:
       share:
-        "Share : "
+        Share : ""
     popover:
       title:
         "Confirmation"
