--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -159,6 +159,7 @@ en:
     gobutton:
       "New search"
     exampleButton: "See annotated feed sample"
+    noResDisclaimer: "The search your are trying to do doesn't have any result yet. Maybe you should be more permissive on filters or add more sources?"
   index:
     disclaimer:
       "Reador.NET is currently <b>under development</b>, please tell us all problems you can encounter using  <a href='javascript:void($zopim.livechat.window.openPopout())'>this link</a>!"
