now we cant make searches on all the information present in database

--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -159,6 +159,7 @@ fr:
       "Nouvelle recherche"
     exampleButton: "Voir un exemple de flux annoté"
     noResDisclaimer: "La recherche que vous souhaitez effectuer ne contient aucune réponse. Vous devriez être plus laxistes sur le filtrage ou ajouter plus de sources?"
+    noFiltersDisclaimer: "La recherche que vous tentez d'effectuer ne contient ni de filtres ni de sources. Vous devez en ajouter"
   index:
     disclaimer:
       "Reador.NET est en <b>cours de développement</b>, merci de nous faire remonter les problèmes que vous rencontrez en <a href='javascript:void($zopim.livechat.window.openPopout())'>cliquant ici</a>!"
