--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -160,6 +160,7 @@ en:
       "New search"
     exampleButton: "See annotated feed sample"
     noResDisclaimer: "The search your are trying to do doesn't have any result yet. Maybe you should be more permissive on filters or add more sources?"
+    noFiltersDisclaimer: "The search your are trying to make doesn't contains any sources and filters. Pleases add some to perform this search."
   index:
     disclaimer:
       "Reador.NET is currently <b>under development</b>, please tell us all problems you can encounter using  <a href='javascript:void($zopim.livechat.window.openPopout())'>this link</a>!"
