improve the homepage search box

--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -157,13 +157,14 @@ fr:
     searchadvanced:
       "Recherche sémantique"
     gobutton:
-      "Nouvelle recherche"
+      "Créer une recherche complexe"
     exampleButton: "Voir un exemple de flux annoté"
     noResDisclaimer: "La recherche que vous souhaitez effectuer ne contient aucune réponse. Vous devriez être plus laxistes sur le filtrage ou ajouter plus de sources?"
     noFiltersDisclaimer: "La recherche que vous tentez d'effectuer ne contient ni filtres ni sources. Vous devez en ajouter"
     moreSearches: "Autres recherches"
     cheaterDisclaimer: "Vous tentez d'accéder à une source que vous ne devriez pas pouvoir voir. Merci de nous contacter si vous trouvez votre recherche légitime."
     noSearchDisclaimer: "La recherche que vous tentez d'afficher n'existe pas."
+    badKeyWord: "Le terme que vous avez entré pour votre recherche ne peut être trouvé dans la base."
   index:
     disclaimer:
       "Reador.NET est en <b>cours de développement</b>, merci de nous faire remonter les problèmes que vous rencontrez en <a href='javascript:void($zopim.livechat.window.openPopout())'>cliquant ici</a>!"
@@ -331,6 +332,7 @@ fr:
       lang: "Langue"
     social:
       shareOn: "Partager sur"
+    dateFormat: "'Le %d/%m/%Y à %H:%M'"
   newmodal:
     breadcrumb:
       sources:
