--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -158,13 +158,14 @@ en:
     searchadvanced:
       "Semantic search"
     gobutton:
-      "New search"
+      "Create a complex search"
     exampleButton: "See annotated feed sample"
     noResDisclaimer: "The search your are trying to do doesn't have any result yet. Maybe you should be more permissive on filters or add more sources?"
     noFiltersDisclaimer: "The search your are trying to make doesn't contains any sources and filters. Pleases add some to perform this search."
     moreSearches: "More searches"
     cheaterDisclaimer: "Your are trying to acces a source that you should not be able to see. Please contact us if you think your search is legitimate."
     noSearchDisclaimer: "The search that you are trying to view does not exist."
+    badKeyWord: "The keyword you used can't be found on database, please try other one."
   index:
     disclaimer:
       "Reador.NET is currently <b>under development</b>, please tell us all problems you can encounter using  <a href='javascript:void($zopim.livechat.window.openPopout())'>this link</a>!"
@@ -332,6 +333,7 @@ en:
       lang: "Lang"
     social:
       shareOn: "Share on"
+    dateFormat: "%d/%m/%Y at %H:%M"
   newmodal:
     breadcrumb:
       sources:
