add the new ajax loading item tool. Really impressive

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -334,6 +334,7 @@ en:
     social:
       shareOn: "Share on"
     dateFormat: "%d/%m/%Y at %H:%M"
+    newResults: "new results"
   newmodal:
     breadcrumb:
       sources:
