some bug fixe on new items printing ajax

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -148,7 +148,7 @@ en:
       "Your favorites news"
   search:
     disclaimer:
-      "Filter created, the new sources will be download soon, please be patient and reload the page."
+      "Filter created, the new sources will be download soon, please be patient."
     infobulle:
       "Can Reador help you?"
     sources:
