--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -147,7 +147,7 @@ fr:
       "Vos favoris"
   search:
     disclaimer:
-      "Filtre crée, les sources que vous avez ajoutées vont être traitées d'ici quelques instants. Merci de rafraichir la page"
+      "Filtre crée, les sources que vous avez ajoutées vont être traitées d'ici quelques instants."
     infobulle:
       "Reador pour vous servir!"
     sources:
