better home page

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -158,7 +158,7 @@ en:
     searchadvanced:
       "Semantic search"
     gobutton:
-      "Create a complex search"
+      "Create a  <br/>complex search"
     exampleButton: "See annotated feed sample"
     noResDisclaimer: "The search your are trying to do doesn't have any result yet. Maybe you should be more permissive on filters or add more sources?"
     noFiltersDisclaimer: "The search your are trying to make doesn't contains any sources and filters. Pleases add some to perform this search."
