add unknown type for toolbox helpers and add the moving refresh button on homepage

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -331,6 +331,7 @@ en:
       person: "Person"
       event: "Event"
       lang: "Lang"
+      other: "Unknown type"
     social:
       shareOn: "Share on"
     dateFormat: "%d/%m/%Y at %H:%M"
