--- a/ZONE-watcher/config/locales/fr.yml
+++ b/ZONE-watcher/config/locales/fr.yml
@@ -333,7 +333,7 @@ fr:
       other: "Type inconnu"
     social:
       shareOn: "Partager sur"
-    dateFormat: "'Le %d/%m/%Y à %H:%M'"
+    dateFormat: "Le %d/%m/%Y à %H:%M"
     newResults: "nouveaux résultats"
   newmodal:
     breadcrumb:
