now when we change the period to analyse we print only corresponding items

--- a/ZONE-watcher/config/locales/en.yml
+++ b/ZONE-watcher/config/locales/en.yml
@@ -336,6 +336,10 @@ en:
       shareOn: "Share on"
     dateFormat: "%d/%m/%Y at %H:%M"
     newResults: "new results"
+    layout:
+      time: "Timeline layout"
+      grid: "Grid layout"
+      list: "Condensed layout"
   newmodal:
     breadcrumb:
       sources:
